--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="header">
         <h1>Triangle Tracker</h1>
         <h4>A triangle is a 3-sided polygon sometimes (but not very commonly) called the trigon. Every triangle has three sides and three angles</h4>
-          <a href="#tracker.html"><button class="btn-danger">Get started</button></a>
+          <a href="tracker.html"><button class="btn-danger">Get started</button></a>
       </div>
       <form class="form-control-static" action="index.html" method="post">
 
