--- a/tracker.html
+++ b/tracker.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="stles.css" type="text/css"
-    <link rel="stylesheet" href="css/bootstrap.css">
-  </head>
-  <body>
-    <div class="container">
-      <img src="images/bluone.jpg" alt="">
-      <div class="header">
-        <h1>Welcome to Tracker</h1>
 
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="styles.css" type="text/css" <link rel="stylesheet" href="css/bootstrap.css">
+</head>
+
+<body>
+  <div class="container">
+    <img src="images/bluone.jpg" alt="">
+    <div class="header">
+      <h1>Welcome to Tracker</h1>
+      <div class="form-group">
+        <form class="" action="index.html" method="post">
+          <label for="prompt">Enter first value:</label>
+          <input type="email" class="form-control" id="email">
+          <label for="promt">Enter  second value :</label>
+          <input type="email" class="form-control" id="email">
+          <label for="prompt">Enter third value:</label>
+          <input type="email" class="form-control" id="email">
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
       </div>
 
     </div>
 
-  </body>
+  </div>
+
+</body>
+
 </html>
