--- a/tracker.html
+++ b/tracker.html
@@ -14,12 +14,12 @@
       <h1>Welcome to Tracker</h1>
       <div class="form-group">
         <form class="" action="index.html" method="post">
-          <label for="prompt">Enter first value:</label>
-          <input type="email" class="form-control" id="email">
-          <label for="promt">Enter  second value :</label>
-          <input type="email" class="form-control" id="email">
-          <label for="prompt">Enter third value:</label>
-          <input type="email" class="form-control" id="email">
+          Enter first value <br>
+          <input type="number" class="form-control" id="email"><br>
+          Enter  second value <br>
+          <input type="number" class="form-control" id="email">
+          Enter third value:<br>
+          <input type="number" class="form-control" id="email">
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
       </div>
