add form changes

--- a/tracker.html
+++ b/tracker.html
@@ -17,9 +17,9 @@
           Enter first value <br>
           <input type="number" class="form-control" id="email"><br>
           Enter  second value <br>
-          <input type="number" class="form-control" id="email">
+          <input type="number" class="form-control" id="email"><br>
           Enter third value:<br>
-          <input type="number" class="form-control" id="email">
+          <input type="number" class="form-control" id="email"><br>
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
       </div>
