--- a/tracker.html
+++ b/tracker.html
@@ -21,6 +21,7 @@
           Enter third value:<br>
           <input type="number" class="form-control" id="email"><br>
           <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-default">Cancel</button>
         </form>
       </div>
 
