--- a/tracker.html
+++ b/tracker.html
@@ -20,7 +20,7 @@
           <input type="number" class="form-control" id="email"><br>
           Enter third value:<br>
           <input type="number" class="form-control" id="email"><br>
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-default">Track</button>
           <button type="submit" class="btn btn-default">Cancel</button>
         </form>
       </div>
