--- a/tracker.html
+++ b/tracker.html
@@ -14,14 +14,14 @@
       <h1>Welcome to Tracker</h1>
       <div class="form-group">
         <form class="" action="index.html" method="post">
-          Enter first value <br>
+          Enter first value: <br>
           <input type="number" class="form-control" id="email"><br>
-          Enter  second value <br>
+          Enter  second value: <br>
           <input type="number" class="form-control" id="email"><br>
           Enter third value:<br>
           <input type="number" class="form-control" id="email"><br>
           <button type="submit" class="btn btn-default">Track</button>
-          <button type="submit" class="btn btn-default">Cancel</button>
+          <button type="cancel" class="btn btn-default">Cancel</button>
         </form>
       </div>
 
