track button changed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Triangle Tracker</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" href="Javascript/scripts.js" type="text/css">
   </head>
   <body>
     <div class="container">
