--- a/tracker.html
+++ b/tracker.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title></title>
   <link rel="stylesheet" href="styles.css" type="text/css" <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="Javascript/scripts.js" type="text/css">
+  <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 
 <body>
@@ -20,7 +22,7 @@
           <input type="number" class="form-control" id="email"><br>
           Enter third value:<br>
           <input type="number" class="form-control" id="email"><br>
-          <button type="submit" class="btn btn-default">Track</button>
+          <button type="button" onclick="track()" value="clickme"  value="four" class="btn btn-default">Track</button>
           <button type="cancel" class="btn btn-default">Cancel</button>
         </form>
       </div>
