add changes in scripts

--- a/tracker.html
+++ b/tracker.html
@@ -17,12 +17,12 @@
       <div class="form-group">
         <form class="" action="index.html" method="post">
           Enter first value: <br>
-          <input type="number" class="form-control" id="email"><br>
+          <input type="number" class="form-control" id="one"><br>
           Enter  second value: <br>
-          <input type="number" class="form-control" id="email"><br>
+          <input type="number" class="form-control" id="two"><br>
           Enter third value:<br>
-          <input type="number" class="form-control" id="email"><br>
-          <button type="button" onclick="track()" value="clickme"  value="four" class="btn btn-default">Track</button>
+          <input type="number" class="form-control" id="three"><br>
+          <button type="button" onclick="track()" value="clickme"  id="four" class="btn btn-default">Track</button>
           <button type="cancel" class="btn btn-default">Cancel</button>
         </form>
       </div>
