--- a/tracker.html
+++ b/tracker.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <title></title>
   <link rel="stylesheet" href="styles.css" type="text/css" <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="Javascript/scripts.js" type="text/css">
   <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 
@@ -22,14 +21,15 @@
           <input type="number" class="form-control" id="two"><br>
           Enter third value:<br>
           <input type="number" class="form-control" id="three"><br>
-          <button type="button" onclick="track()" value="clickme"  id="four" class="btn btn-default">Track</button>
-          <button type="cancel" class="btn btn-default">Cancel</button>
+          <button onclick="track()"  id="four" class="btn btn-default">Track</button>
+          <button class="btn btn-default">Cancel</button>
         </form>
       </div>
 
     </div>
 
   </div>
+  <scripts src="Javascript/script.js" type="text/javascript"></script>
 
 </body>
 
