--- a/index.html
+++ b/index.html
@@ -1,52 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Triangle Tracker</title>
-    <link rel="stylesheet" href="styles.css" type="text/css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-  </head>
-  <body>
-    <div class="container">
-      <img src="images/bluone.jpg" alt="none">
-      <div class="header">
-        <h1>Triangle Tracker</h1>
-        <h4>A triangle is a 3-sided polygon sometimes (but not very commonly) called the trigon. Every triangle has three sides and three angles</h4>
+<html>
 
-      </div>
-      <form class="" action="index.html" method="get">
-                  Enter first value: <br>
-                  <input type="number" class="form-control" id="sideA"><br>
-                  Enter  second value: <br>
-                  <input type="number" class="form-control" id="sideB"><br>
-                  Enter third value:<br>
-                  <input type="number" class="form-control" id="sideC"><br>
-                  <button  class="btn btn-default">Cancel</button>
-                </form>
-              </div>
-          <button onclick="submit();" class="btn btn-default">submit</button>``
-            </div>
+<head>
+  <title>The Triangle Tracker</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+</head>
 
-    <script>
-       function submit(){
-       var sideA=document.getElementById("sideA").value;
-       var sideB=document.getElementById("sideB").value;
-       var sideC=document.getElementById("sideC").value;
-
-       if(sideA==sideB && sideB==sideC){
-       alert("equilateral");
-       }
-       else if (sideA==sideB || sideA==sideC || sideB==sideC){
-       alert("isosceles");
-       }
-       else if (sideA+sideB <sideC && sideA+sideC <sideB && sideB+sideC <sideA){
-       alert("not a triangle");
-       }
-       else if(sideA!=sideB && sideB!=sideC && sideA!=sideC) {
-       alert("scalene");
-       }
-
-   }
-       </script>
-  </body>
+<body>
+  <div class="container">
+    <img src="images/bluone.jpg" alt="">
+    <div class="head">
+      <h1> TRIANGLE-TRACKER</h1>
+      <p><input type="button" value="click here to begin" onclick="tracker()"></p>
+    </div>
+    <script src="./Javascript/scripts.js" charset="utf-8"></script>
+  </div>
+</body>
 </html>
