changes in index.html

--- a/index.html
+++ b/index.html
@@ -5,13 +5,32 @@
   <title>The Triangle Tracker</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+  <link href="https://fonts.googleapis.com/css?family=Shojumaru&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Coming+Soon&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
   <div class="container">
     <img src="images/bluone.jpg" alt="">
     <div class="head">
-      <h1> TRIANGLE-TRACKER</h1>
+      <h1> TRIANGLE-TRACKER</h1><br>
+      <div class="facts">
+          <h2>What to know!</h2>
+          <ul>
+            <li>Triangles are polygons with the least possible number of sides (three).</li>
+            <li>The three internal angles of a triangle always add to 180 degrees.</li>
+            <li><strong>An equilateral triangle</strong> has three sides of equal length and three equal angles.</li>
+            <li><strong>An isosceles triangle</strong> has two sides of equal length and two equal angles.</li>
+            <li><strong>A scalene triangle</strong> has no sides of equal length and no equal angles.</li>
+            <li>Any polygon, such as a square, octagon or pentagon, can be divided into a series of triangles. </li>
+            <li>The longest side of the triangle is called the hypotenuse.</li>
+          </ul>
+
+      </div><br><br>
+    <h2>Now get to know the type!</h2>
+
+
       <p><input type="button" value="click here to begin" onclick="tracker()"></p>
     </div>
     <script src="./Javascript/scripts.js" charset="utf-8"></script>
