--- a/index.html
+++ b/index.html
@@ -16,24 +16,39 @@
     <div class="head">
       <h1> TRIANGLE-TRACKER</h1><br>
       <div class="facts">
-          <h2>What to know!</h2>
-          <ul>
-            <li>Triangles are polygons with the least possible number of sides (three).</li>
-            <li>The three internal angles of a triangle always add to 180 degrees.</li>
-            <li><strong>An equilateral triangle</strong> has three sides of equal length and three equal angles.</li>
-            <li><strong>An isosceles triangle</strong> has two sides of equal length and two equal angles.</li>
-            <li><strong>A scalene triangle</strong> has no sides of equal length and no equal angles.</li>
-            <li>Any polygon, such as a square, octagon or pentagon, can be divided into a series of triangles. </li>
-            <li>The longest side of the triangle is called the hypotenuse.</li>
-          </ul>
+        <h2>What to know!</h2>
+        <ul>
+          <li>Triangles are polygons with the least possible number of sides (three).</li>
+          <li>The three internal angles of a triangle always add to 180 degrees.</li>
+          <li><span><strong>An equilateral triangle</strong></span> has three sides of equal length and three equal angles.</li>
+          <li><span><strong>An isosceles triangle</strong></span>has two sides of equal length and two equal angles.</li>
+          <li><span><strong>A scalene triangle</strong></span>has 0 sides of equal length and no equal angles.</li>
+          <li>Any polygon, such as a square, octagon or pentagon, can be divided into a series of triangles. </li>
+          <li>The longest side of the triangle is called the hypotenuse.</li>
+        </ul>
 
       </div><br><br>
-          <h2>Now get to know the type!</h2>
-
-
+      <h2>Now get to know the type!</h2>
       <p><input type="button" value="click here to begin" onclick="tracker()"></p>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <img src="https://www.quickanddirtytips.com/sites/default/files/styles/article_main_image/public/images/6442/abstract-triangles.png?itok=Mur3-XJF" alt="">
+
+
+      </div>
+      <div class="col-md-4">
+        <img src="https://media1.tenor.com/images/d78c1cd0a4e2d18e1d72b2ee3555dc21/tenor.gif?itemid=5506636" alt="">
+
+      </div>
+      <div class="col-md-4">
+        <img src="https://cdn11.bigcommerce.com/s-qanoy912o9/images/stencil/1024x1024/products/1449/6592/cmps9gikp8uqnacasjur__34763.1539383915.jpg?c=2" alt="">
+
+      </div>
+
     </div>
     <script src="./Javascript/scripts.js" charset="utf-8"></script>
   </div>
 </body>
+
 </html>
