--- a/index.html
+++ b/index.html
@@ -31,18 +31,19 @@
       <h2>Now get to know the type!</h2>
       <p><input type="button" value="click here to begin" onclick="tracker()"></p>
     </div>
+    <h2>Have fun learning more!</h2>
     <div class="row">
       <div class="col-md-4">
-        <img src="https://www.quickanddirtytips.com/sites/default/files/styles/article_main_image/public/images/6442/abstract-triangles.png?itok=Mur3-XJF" height=100px width="200px" alt="">
+        <img src="https://www.quickanddirtytips.com/sites/default/files/styles/article_main_image/public/images/6442/abstract-triangles.png?itok=Mur3-XJF" height=200px width="300px" alt="">
 
 
       </div>
       <div class="col-md-4">
-        <img src="https://media1.tenor.com/images/d78c1cd0a4e2d18e1d72b2ee3555dc21/tenor.gif?itemid=5506636"  height="100px" width="200px" alt="">
+        <img src="https://media1.tenor.com/images/d78c1cd0a4e2d18e1d72b2ee3555dc21/tenor.gif?itemid=5506636"  height="200px" width="300px" alt="">
 
       </div>
       <div class="col-md-4">
-        <img src="https://cdn11.bigcommerce.com/s-qanoy912o9/images/stencil/1024x1024/products/1449/6592/cmps9gikp8uqnacasjur__34763.1539383915.jpg?c=2" height="100px" width="200px" alt="">
+        <img src="https://i.ytimg.com/vi/lQ5AuNVjxhI/maxresdefault.jpg" height="200px" width="300px" alt="">
 
       </div>
 
