--- a/index.html
+++ b/index.html
@@ -29,22 +29,39 @@
 
       </div><br><br>
       <h2>Now get to know the type!</h2>
-      <p><input type="button" value="click here to begin" onclick="tracker()"></p><br>
+      <form action="/action_page.php">
+        <fieldset>
+          <legend>What Triangle is it?:</legend>
+          Enter side1:<br>
+          <input type="text" id="side1"  value=""><br>
+          Enter side2:<br>
+          <input type="text" id="side2"  value=""><br><br>
+          Enter side3:<br>
+          <input type="text" id="side3"  value=""><br><br>
+
+        <button type="button" name="button" class="btn btn-danger" onclick="tracker()">Submit</button>
+        <button type="button" name="button" class="btn btn-default">Reset</button>
+        </fieldset>
+      </form>
       <h2>Have fun learning more!</h2>
 
     </div>
     <div class="row">
       <div class="col-md-4">
-      <a href="https://www.google.com/search?q=cool+triangle+dimensions&tbm=isch&source=univ&sa=X&ved=2ahUKEwiHq8i45sziAhUQx4UKHT5BAdUQ7Al6BAgAEA8&biw=1321&bih=589"><img src="https://www.quickanddirtytips.com/sites/default/files/styles/article_main_image/public/images/6442/abstract-triangles.png?itok=Mur3-XJF" height=200px width="300px" alt=""></a>
+        <a href="https://www.google.com/search?q=cool+triangle+dimensions&tbm=isch&source=univ&sa=X&ved=2ahUKEwiHq8i45sziAhUQx4UKHT5BAdUQ7Al6BAgAEA8&biw=1321&bih=589"><img
+            src="https://www.quickanddirtytips.com/sites/default/files/styles/article_main_image/public/images/6442/abstract-triangles.png?itok=Mur3-XJF" height=200px width="300px" alt=""></a>
 
 
       </div>
       <div class="col-md-4">
-      <a href="https://www.google.com/search?tbm=isch&q=triangles+animation&chips=q:triangles+animation,g_1:animated:c0vnC8Nimgg%3D&usg=AI4_-kT_4IX3Isp2bT8K1J9H2X0pZYWuYw&sa=X&ved=0ahUKEwij0Pzg5cziAhVS6RoKHQmyAvMQ4lYILCgD&biw=1321&bih=589&dpr=1">  <img src="https://media1.tenor.com/images/d78c1cd0a4e2d18e1d72b2ee3555dc21/tenor.gif?itemid=5506636"  height="200px" width="300px" alt=""></a>
+        <a href="https://www.google.com/search?tbm=isch&q=triangles+animation&chips=q:triangles+animation,g_1:animated:c0vnC8Nimgg%3D&usg=AI4_-kT_4IX3Isp2bT8K1J9H2X0pZYWuYw&sa=X&ved=0ahUKEwij0Pzg5cziAhVS6RoKHQmyAvMQ4lYILCgD&biw=1321&bih=589&dpr=1">
+          <img src="https://media1.tenor.com/images/d78c1cd0a4e2d18e1d72b2ee3555dc21/tenor.gif?itemid=5506636" height="200px" width="300px" alt=""></a>
 
       </div>
       <div class="col-md-4">
-      <a href="https://www.google.com/search?tbm=isch&sa=1&ei=JL70XJ3XL7CPlwSC15GIDw&q=triangles+images&oq=triangles+images&gs_l=img.3..0j0i5i30l5j0i8i30l4.138201.142008..142407...1.0..0.268.2780.2-12......0....1..gws-wiz-img.......35i39.-Q2XqwRD-ns#imgrc=hFig1w95SGdikM:"><img src="https://i.ytimg.com/vi/lQ5AuNVjxhI/maxresdefault.jpg" height="200px" width="300px" alt=""></a>
+        <a
+          href="https://www.google.com/search?tbm=isch&sa=1&ei=JL70XJ3XL7CPlwSC15GIDw&q=triangles+images&oq=triangles+images&gs_l=img.3..0j0i5i30l5j0i8i30l4.138201.142008..142407...1.0..0.268.2780.2-12......0....1..gws-wiz-img.......35i39.-Q2XqwRD-ns#imgrc=hFig1w95SGdikM:"><img
+            src="https://i.ytimg.com/vi/lQ5AuNVjxhI/maxresdefault.jpg" height="200px" width="300px" alt=""></a>
 
 
 
